\name{NEWS}
\title{\pkg{roger} News}
\encoding{UTF-8}

\section{Changes in \pkg{roger} version 1.5-0}{
  \subsection{New features}{
    \itemize{
      \item{\code{close_bracket_style} and \code{open_bracket_style} now
	accept that the preceding (resp. following) expression is on a
	different line than the bracket.}
      \item{\code{close_parenthesis_style} and
	\code{open_parenthesis_style} now accept that the preceding
	(resp. following) expression is on a different line than the
	parenthesis.}
      \item{\code{ops_spaces_style} now also checks spacing around the
	keyword \code{in} used in \code{for} loops.}
    }
  }
  \subsection{Bug fixes}{
    \itemize{
      \item{\code{left_parenthesis_style} now works correctly with the
	unary operator \code{!} and with parentheses used to echo the
	result of an expression. The linter is also more robust and
	reliable (although slower) for many other constructions.}
      \item{Translations of messages from \code{all_linters}
	completed.}
    }
  }
}
  
\section{Changes in \pkg{roger} version 1.4-0}{
  \subsection{New features}{
    \itemize{
      \item{\code{all_style} utility function to validate code using all
	available style linters at once.}
      \item{\code{nomagic_style} now allows non-ASCII uppercase letters
	in symbol names.}
    }
  }
  \subsection{Changes}{
    \itemize{
      \item{\code{nomagic_style} uses a more robust procedure to identify
	valid assignments of magic numbers to variables.}	
      \item{\code{line_length_style} now issues only one message per
	line exceeding the length threshold.}
    }
  }
}

\section{Changes in \pkg{roger} version 1.3-1}{
  \subsection{Bug fixes}{
    \itemize{
      \item{\code{commas_style} now allows spaces before a comma if the
	preceeding symbol is also a comma. This exception to the general
	rule is needed for consecutive commas commonly used in the
	indexing of arrays.}
    }
  }
}

\section{Changes in \pkg{roger} version 1.3-0}{
  \subsection{New features}{