@@ -61,6 +61,8 @@ cat(
 "1 + (sum(1:10))",
 "1 + ((sum(1:10)))",
 "(x + y) + 1",
+"(x + y) * 3 + 1",
+"((x + y) * 3) * 2 + 1",
 "((x + y) + 1)",
 "(x + y)",
 "((x + y))",
